Fix collapse icon encoding

--- a/assets/obsidian-styles.css
+++ b/assets/obsidian-styles.css
@@ -260,3 +260,9 @@
     font-display: swap;
     src: url('https://publish.obsidian.md/public/fonts/853ff76f08786ae44ca0.woff');
 }
+
+.collapse-icon::before 
+{ 
+    content: "-" !important; 
+    visibility: hidden !important;
+}
